[package]
name = "nanbox"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

description = "NaN boxing implementation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Marwes/nanbox"
documentation = "https://docs.rs/crate/nanbox"

[dependencies]
unreachable = "0.1.1"

[dev-dependencies]
quickcheck = "0.4.1"
